# TrabalhoPratico

./: CMakeLists.txt  README.md  cabecalhos.h  main.cpp
Models/: Localmodel.cpp  Localmodel.h  PedidoModel.cpp  PedidoModel.h  Veiculo.h  Veiculomodel.cpp  Veiculomodel.h
Services/: DataService.cpp  DataService.h  EntregaService.cpp  EntregaService.h  LocalService.cpp  LocalService.h  Localservice.cpp  PedidoService.cpp  PedidoService.h  VeiculoService.cpp  VeiculoService.h
Tests/: testePedidos.cpp  testesLocais.cpp  testesVeiculo.cpp
